fix button alignment

--- a/index.css
+++ b/index.css
@@ -113,9 +113,9 @@ h3 {
     fill: #fff2d6;
 }
 
-
 .buttons {
-    display: flex;
+    width: max-content;
+    margin: auto;
 }
 
 .buttons button {
@@ -126,13 +126,14 @@ h3 {
     background-color: #6c4b00;
     text-align: center;
     font-size: 14px;
-    margin: 10px 0;
+    margin: 10px 8px;
     padding: 10px;
     border-radius: 100px;
 }
 
 #youtube {
-    margin-top: 15px;
+    display: inline-block;
+    margin-top: 20px;
 }
 
 #youtube div {
@@ -191,8 +192,14 @@ h3 {
     transform: translateY(2px);
 }
 
+#tips {
+    display: inline;
+    min-height: 90px;
+}
+
+
 #tips button {
-    margin-top: 25px;
+    transform: translateY(-5px);
     background-color: #ffffff;
     color: #8000ff;
     padding: 8px;
@@ -207,16 +214,10 @@ h3 {
 
 #tips button:active {
     transition-duration: 50ms;
+    transform: translateY(-3px);
     background-color: #eeddff;
 }
 
-.spacer {
-    flex: 100%;
-}
-
-.mid-spacer {
-    flex: 10%;
-}
 
 a {
     text-decoration: none;
